[workspace]

members = [
  "owned_crate",
  "erc20",
  "staking_rewards_factory",
  "staking_rewards_factory_tests",
  "staking_rewards_factory_crate",
  "staking_dual_rewards_crate",
  "erc20_crate",
  "dual_rewards_distribution_recipient_crate",
  "pausable_crate",
  "dual_rewards_distribution_recipient_crate",
  "reentrancy_guard_crate",
  "staking_dual_rewards"
]

[profile.release]
codegen-units = 1
lto = true
