[package]
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "staking_dual_rewards"
version = "0.2.0"

[dependencies]
owned_crate = {path = "../owned_crate"}
pausable_crate = { path = "../pausable_crate" }
staking_dual_rewards_crate = {path = "../staking_dual_rewards_crate"}
reentrancy_guard_crate = {path = "../reentrancy_guard_crate"}
dual_rewards_distribution_recipient_crate = {path = "../dual_rewards_distribution_recipient_crate"}
casper-contract = "=1.4.3"
casper-types = "=1.4.6"
contract-utils = { path = "../utils/contract-utils" }
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[[bin]]
bench = false
doctest = false
name = "staking_dual_rewards"
path = "bin/staking_dual_rewards.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
