[package]
name = "test"
version = "0.2.0"
authors = ["Muhammad Saad Majeed<saad.majeed@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
[[bin]]
name = "staking_dual_rewards_test"
path = "src/main.rs"
bench = false
doctest = false
test = false


[profile.release]
lto = true
