[package]
name = "staking_dual_rewards_crate"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owned_crate = {path = "../owned_crate"}
reentrancy_guard_crate = {path = "../reentrancy_guard_crate"}
pausable_crate ={path ="../pausable_crate"}
dual_rewards_distribution_recipient_crate = {path = "../dual_rewards_distribution_recipient_crate"}
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"
