[package]
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "staking_rewards_factory"
version = "0.2.0"

[dependencies]
staking_rewards_factory_crate = { path = "../staking_rewards_factory_crate" }
staking_dual_rewards_crate = {path = "../staking_dual_rewards_crate"}
dual_rewards_distribution_recipient_crate = {path = "../dual_rewards_distribution_recipient_crate"}
pausable_crate = { path = "../pausable_crate" }
reentrancy_guard_crate = {path = "../reentrancy_guard_crate"}
owned_crate = {path = "../owned_crate"}
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[[bin]]
bench = false
doctest = false
name = "staking_rewards_factory"
path = "bin/staking_rewards_factory.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
