[package]
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
name = "erc20"
version = "0.1.0"

[dependencies]
casper-contract = "=1.4.3"
casper-types = "=1.4.6"
contract-utils = { path = "../utils/contract-utils" }
erc20_crate = { path = "../erc20_crate" }
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[[bin]]
bench = false
doctest = false
name = "erc20-token"
path = "bin/erc20_token.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
