[package]
name = "test"
version = "0.2.0"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "=1.4.3"
casper-types = "=1.4.6"
[[bin]]
name = "staking_rewards_test"
path = "src/main.rs"
bench = false
doctest = false
test = false


[profile.release]
lto = true
