[package]
name = "erc20-tests"
version = "0.2.1"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
contract-utils = { path = "../../utils/contract-utils" }
test-env = { path = "../../utils/test-env" }
blake2 = "0.9.1"
hex = "0.4.3"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]