[package]
name = "pausable_crate"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owned_crate = {path = "../owned_crate"}
casper-contract = "= 1.4.3"
casper-types = "= 1.4.6"
contract-utils = { path = "../utils/contract-utils" }
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"
