[package]
authors = ["Muhammad Saad Majeed <saad.majeed@scytalelabs.com>"]
edition = "2018"
name = "staking_dual_rewards_tests"
version = "0.1.0"

[dependencies]
casper-contract = { version = "=1.4.3", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "=2.0.3", features = ["test-support"] }
casper-execution-engine = "=1.4.4"
casper-types = "=1.4.6"
casper-hashing = "1.4.3"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
hex = "0.4.3"
blake2 = "0.9.1"



[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
